crimson/osd: accurately judge whether to do drop_recovery_read on recovering objs

Fixes: https://tracker.ceph.com/issues/47313
Signed-off-by: Xuehan Xu <xxhdx1985126@gmail.com>